# knowledge-base

./: .env.example  .gitignore  .mcp.json  CLAUDE.md
.claude/agents/: INDEX.md  pmo-worker.md  research-worker.md  suncorp-worker.md
.claude/commands/: capacity.md  jira.md  pmo-sync.md  pmo.md  weekly-plan.md
.claude/skills/: kb-search.skill  meeting-backup.skill  meetings.skill
.obsidian/: README.md  app.json  appearance.json  core-plugins-migration.json  core-plugins.json  daily-notes.json  graph.json  hotkeys.json  workspace.json
_templates/: INDEX.md
_templates/2lines-external/: base.html  style.css
claude-automations/: .gitignore  Makefile  README.md  install.sh  run-workflow.sh
claude-automations/launchd/: com.2lines.claude-evening.plist  com.2lines.claude-morning.plist  com.2lines.granola-reminder.plist  com.2lines.qmd-indexer.plist
clients/: _template.md
clients/Circuit/: 2026-02-05-third-party-marketplace-delivery-reconciliation.md
finance/: _template.md
marketing/: _template.md
marketing/use-cases/: 2lines-software-overview.md  blacksquare-cto.md  circuit-retail-data-platform.md  decisive-farming-cto.md  discontinuity-bridge-platform.md  jot-digital-partnership.md  (+2 more)
mcp/: README.md
mcp/calendar-mcp/: .gitignore  README.md  pyproject.toml
mcp/calendar-mcp/src/calendar_mcp/: __init__.py  icalbuddy.py  server.py  tools.py
mcp/gcalendar-mcp/: .gitignore  README.md  pyproject.toml
mcp/gcalendar-mcp/src/gcalendar_mcp/: __init__.py  auth.py  calendar.py  server.py  tools.py
mcp/gmail-mcp/: .gitignore  LICENSE  README.md  pyproject.toml
mcp/gmail-mcp/src/gmail_mcp/: __init__.py  auth.py  gmail.py  server.py  tools.py
operations/: 2026-02-07-daily-digest.md  2026-02-08-daily-digest.md  2026-02-09-daily-digest.md  2026-02-10-daily-digest.md  2026-02-11-daily-digest.md  2026-02-12-daily-digest.md  _daily-note-template.md  _template.md  billing-config.md  calendar-billing-map.md
pipeline/: _template.md
research/: _template.md
(+183 files in other folders)
